fix: Layout Section spacing

--- a/packages/core/src/components/sections/Incentives/section.module.scss
+++ b/packages/core/src/components/sections/Incentives/section.module.scss
@@ -2,6 +2,8 @@
 @import "@faststore/ui/src/styles/base/utilities.scss";
 
 .section {
+  margin-top: 0;
+
   @import "@faststore/ui/src/components/atoms/Icon/styles.scss";
   @import "@faststore/ui/src/components/atoms/List/styles.scss";
   @import "@faststore/ui/src/components/organisms/Incentives/styles.scss";
