--- a/packages/core/src/components/sections/Newsletter/section.module.scss
+++ b/packages/core/src/components/sections/Newsletter/section.module.scss
@@ -2,7 +2,7 @@
 @import "@faststore/ui/src/styles/base/utilities.scss";
 
 .section {
-  padding-bottom: 0;
+  margin-bottom: 0;
 
   @import "@faststore/ui/src/components/atoms/Button/styles.scss";
   @import "@faststore/ui/src/components/atoms/Icon/styles.scss";
