--- a/packages/ui/src/styles/base/layout.scss
+++ b/packages/ui/src/styles/base/layout.scss
@@ -23,12 +23,12 @@ main {
 }
 
 .layout__section {
-  padding-bottom: var(--fs-spacing-4);
-  padding-top: var(--fs-spacing-4);
+  margin-bottom: var(--fs-spacing-4);
+  margin-top: var(--fs-spacing-4);
 
   @include media(">=notebook") {
-    padding-bottom: var(--fs-grid-padding);
-    padding-top: var(--fs-grid-padding);
+    margin-bottom: var(--fs-grid-padding);
+    margin-top: var(--fs-grid-padding);
   }
 }
 
